Implemented AR Scene

--- a/AR-Build-Your-Game/Info.plist
+++ b/AR-Build-Your-Game/Info.plist
@@ -40,5 +40,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>We need to access the camera to show Augmented Reality content.</string>
 </dict>
 </plist>
